Fixed issues of accessibility and changed the internal pages hero to avoid contrast issues with the hero images.

--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -2,18 +2,19 @@
 
 figure.logo {
   padding: 0;
-  margin: 15px 0 0 0;
+  margin: 0;
 
-  @include mediumUp {
-    margin: 30px 0;
+  a {
+    display: block;
+    line-height: 0;
   }
 
   img {
     width: auto;
-    height: 42px;
+    height: 35px;
 
     @include mediumUp {
-      height: 70px;
+      height: 55px;
     }
   }
 }
