--- a/src/components/paragraphs/hero/title-hero.scss
+++ b/src/components/paragraphs/hero/title-hero.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  position: relative;
 
   @include mediumUp {
     height: calc(100vw/3.25);
